--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -7,28 +7,32 @@
 }
 
 /* Estilos para el encabezado */
-.header {
+header {
 	background-color: #333;
 	color: #fff;
 	padding: 20px;
+	display: flex;
+	flex-direction:row;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.h1 {
-	margin: 0;
+h1 {
+	margin-left: 20px;
 }
 
-.nav ul {
+nav ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 }
 
-.nav li {
+nav li {
 	display: inline-block;
 	margin-right: 20px;
 }
 
-.nav a {
+nav a {
 	color: #fff;
 	text-decoration: none;
 	font-weight: bold;
