--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,10 +1,12 @@
 .footer {
     height: 50px;
     margin-bottom: 0px;
-    background-color: rgba(31, 29, 29, 0.855);
+    background-color: #1a1a1a;
     color: aliceblue;
     text-align: center;
     line-height: 50px;
+    position: sticky;
+    bottom: 0;
     
     
 }
