--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -8,8 +8,8 @@
 
 /* Estilos para el encabezado */
 header {
-	background-color: #333;
-	color: #fff;
+	background-color: #078fcd;
+	color: #333;
 	padding: 20px;
 	display: flex;
 	flex-direction:row;
@@ -19,6 +19,7 @@ header {
 
 h1 {
 	margin-left: 20px;
+	font-weight: bold;
 }
 
 nav ul {
@@ -81,3 +82,9 @@ nav a {
 .producto button:hover {
 	background-color: #666;
 }
+
+@media screen and (max-width: 768px) {
+ header {
+	flex-direction: column;
+ }
+  }
