--- a/src/pages/inicio.module.css
+++ b/src/pages/inicio.module.css
@@ -1,1 +1,11 @@
+.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
 
+.flex2 {
+    justify-content: center;
+}
