--- a/src/pages/usuarios/usuarios.module.css
+++ b/src/pages/usuarios/usuarios.module.css
@@ -1,3 +1,19 @@
 .top {
-    margin-top: 20px;
+    margin-top: 40px;
+ 
+}
+
+.ficha {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(255, 255, 255);
+  height: 120px;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5%;
+  
+  
+}
+.container {
+  margin-top: 50px;
 }
