--- a/src/pages/inicio.module.css
+++ b/src/pages/inicio.module.css
@@ -3,9 +3,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 .flex2 {
     justify-content: center;
+}
+.titulo {
+    font-size: 4em;
 }
