--- a/src/pages/productos/products.module.css
+++ b/src/pages/productos/products.module.css
@@ -1,40 +1,49 @@
 .productos {
-    display:flex;
-    justify-content:center;
-    flex-wrap:wrap;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
-    
+    margin-bottom: 60px;
+
 }
 
 .seccionProductos {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     margin-top: 20px;
-   
-    
-    
+
+
+
 }
+
 .busqueda {
     display: flex;
     gap: 10px;
     margin: 15px;
-   width: 50%;
-   justify-content: space-between;
-   align-items: center;
-   padding: 5px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
 }
 
 
 
 .producto {
-    width: 250px;
+    display: flex;
+    flex-direction: row;
+    /* flex-wrap: wrap; */
+    justify-content: space-between;
+    width: 100%;
     border: 1px solid lightseagreen;
     padding: 10px 20px;
+    margin-right: 15px;
+   
 
 }
+
 h2 {
     text-align: center;
     margin-top: 20px;
